# galileo_serial_server

./: CMakeLists.txt  package.xml
include/galelio_serial_server/: galelio_serial_server.h
include/galileo_serial_server/: galileo_serial_server.h
launch/: galelioSerialServer.launch  galileoSerialServer.launch  galileo_serial_server.launch
msg/: GalelioNativeCmds.msg  GalelioStatus.msg  GalileoStatus.msg
src/: AsyncSerial.cpp  galelio_serial_server.cpp  galelio_serial_server_node.cpp  galileo_serial_server.cpp  galileo_serial_server_node.cpp
